--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -193,8 +193,8 @@
 }
 
 .box9 {
-    width: 48px;
-    height: 341px;
+    width: 3rem;
+    height: 21.31rem;
     background-color: red;
     position: absolute;
     top: 220px;
@@ -345,7 +345,7 @@
     font-size: 0.15rem;
     // background-image: url('../../assets/images/globalCenter/maxBg.png');
     // background-size: 100% 100%;
-    background-image: url('../../assets/images/globalCenter/buildBg3.png');
+    background-image: url('../../assets/images/globalCenter/buildBg4.png');
     background-size: 100% 100%;
     position: relative;
 
