--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -683,12 +683,13 @@
 
         .ritConb {
             .sysRemark {
-                width: 231px;
+                width: 100%;
                 height: 214px;
                 background-image: url('../../assets/images/globalCenterNew/sysScore1.png');
                 background-size: auto 100%;
                 background-repeat: no-repeat;
                 background-position: center;
+                margin-left: 2px;
             }
 
             .alarmMsgT {
